# smart-contracts-ink

./: README.md
cross_contract_flipper/: Cargo.toml
delegator/: Cargo.toml
delegator/accumulator/: Cargo.toml  lib.rs
erc20/: lib.rs
flipper/: Cargo.toml
incrementer/: Cargo.toml  lib.rs
