[package]
name = "cross_contract_flipper"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.0.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

flipper = { path = "../flipper", default-features = false, features = ["ink-as-dependency"] }
[dev-dependencies]
ink_e2e = "4.0.0"

[lib]
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    # Used for ABI generation.
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "flipper/std",
]
ink-as-dependency = []
e2e-tests = []

